added additional markdown comments

--- a/Zackary-Overend-Final.ipynb
+++ b/Zackary-Overend-Final.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "720727f4",
+   "metadata": {},
+   "source": [
+    "# Install required library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "0a07c0c7",
@@ -331,6 +339,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e34c127",
+   "metadata": {},
+   "source": [
+    "# Display Version"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "ddb5dbbe",
@@ -351,6 +367,14 @@
     "# check installed version (must be >3.0)\n",
     "import pycaret\n",
     "pycaret.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bee2cf1",
+   "metadata": {},
+   "source": [
+    "# Import data and show the categories"
    ]
   },
   {
@@ -737,6 +761,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d8a1b18",
+   "metadata": {},
+   "source": [
+    "# Set Dropped and Categorical Features and setup for analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "d02681c4",
@@ -897,6 +929,14 @@
     "          ignore_features=ignored_features, \n",
     "          categorical_features=categorical_features\n",
     "          ) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de42fd58",
+   "metadata": {},
+   "source": [
+    "# Compare models"
    ]
   },
   {
@@ -1645,6 +1685,14 @@
    "source": [
     "best_pred = predict_model(best)\n",
     "best_pred.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7894ea7a",
+   "metadata": {},
+   "source": [
+    "# Analysis of Runner up Extra Trees Regression"
    ]
   },
   {
